--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
+        <link type="stylesheet" href="styles.css">
     </head>
 
     <body>
