--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link type="stylesheet" href="styles.css">
+        <link type="stylesheet" href="css/styles.css">
     </head>
 
     <body>
             
     </body>
 
-    <script></script>
+    <script type="text/javascript"></script>
 </html>
