--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
         <body>
            
-            <script src="" async defer></script>
+            <script src="script.js" async defer></script>
         </body>
     
 </html>
